<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#ffc107"
        android:text="@string/kelas"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="#FFC107"
        android:text="@string/mhs"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="#FFC107"
        android:text="@string/mhskelas"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="#FFC107"
        android:text="@string/absen"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="#FFC107"
        android:text="@string/nilai"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:textStyle="bold" />
</LinearLayout>
